# SoftwareRasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Rasterizer.sln  Rasterizer.vcxproj  Rasterizer.vcxproj.filters
sample/scenes/: NewShip.mtl
src/: EdgeData.cpp  EdgeData.hpp  EdgeEquation.cpp  EdgeEquation.hpp  FragmentData.cpp  FragmentData.hpp  FragmentShaderBase.cpp  FragmentShaderBase.hpp  InputOutputManager.cpp  InputOutputManager.hpp  Main.cpp  ParameterEquation.cpp  ParameterEquation.hpp  PixelData.cpp  PixelData.hpp  PixelShader.hpp  PixelShaderBase.cpp  PixelShaderBase.hpp  PolygonClipper.cpp  PolygonClipper.hpp  Rasterizer.cpp  Rasterizer.hpp  Renderer.cpp  Renderer.hpp  TriangleEquations.cpp  TriangleEquations.hpp  Vector.cpp  VectorMath.hpp  Vertex.cpp  Vertex.hpp  VertexShaderBase.cpp  VertexShaderBase.hpp  ViewFrustumClipper.cpp  ViewFrustumClipper.hpp
